    VCHANS         - Support Virtual Channels
    EXCEPTS        - Support ban exceptions (+e)
    INVEX          - Support invite exceptions (+I)
    WALLCHOPS      - /notice @#channel will notice only ops
                     /notice %#channel will notice only halfops/ops
		     /notice +#channel will notice only voices/halfops/ops

		     privmsg is also supported.
    MODES=%i       - The number of channel modes accepted per MODE command
    MAXCHANNELS=%i - The maximum channels per user
    MAXBANS=%i     - The limit on the total number of bans, excepts and invite
                     excepts per channel
    MAXTARGETS=%i  - The number of users that may be chained together in a
                     PRIVMSG or NOTICE (user1,user2,user3...)
    NICKLEN=%i     - The maximum nickname length
    TOPICLEN=%i    - The compiled in topic length
    KICKLEN=%i     - The length of a KICK message
    CHANTYPES=%s   - The types of channels supported (currently '#&')
    PREFIX=%s      - The allowed PRIVMSG/NOTICE channel prefixes (server based
                     /onotice, NOTICE @%#channel :message)
    CHANMODES=%s   - How channel modes are used (see supported.h for details)
    NETWORK=%s     - The IRC network name
    CHARSET=%s     - The character set the ircd uses for channel names

- CAPAB List:

    TS      - Support the TS protocol
    QS      - Remove the QUIT storm on splits
    EX      - Support +e exceptions in channels
    CHW     - Support PRIVMSG/NOTICE @#channel messages
    LL      - LazyLink server
    IE      - Invite Exceptions - +I on channels - All nick!user@hosts listed in
              a +I are exempt from having to be invited to the channel before
              JOINing
    EOB     - End of Burst - Servers with this enabled cannot issue burst
              commands after it sends and receives an EOB command, thereby
              preventing op hacking
    KLN     - Support remote K-lines
    GLN     - Support G-lines